; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-mrbc/tools/mrbc/extr_mrbc.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-mrbc/tools/mrbc/extr_mrbc.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrbc_args = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.mrbc_args*)* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup(i32* %0, %struct.mrbc_args* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.mrbc_args*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.mrbc_args* %1, %struct.mrbc_args** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.mrbc_args*, %struct.mrbc_args** %4, align 8
  %7 = getelementptr inbounds %struct.mrbc_args, %struct.mrbc_args* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = call i32 @mrb_free(i32* %5, i8* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @mrb_close(i32* %11)
  ret void
}

declare dso_local i32 @mrb_free(i32*, i8*) #1

declare dso_local i32 @mrb_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
